--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,23 +1,28 @@
 # 构建阶段
-FROM node:18-alpine as build-stage
+FROM node:18-alpine AS build-stage
 
 # 设置工作目录
 WORKDIR /app
 
-# 复制 package.json 和 package-lock.json
-COPY package*.json ./
+# 复制 package.json 和 pnpm-lock.yaml
+COPY package*.json pnpm-lock.yaml ./
+
+# 安装 pnpm 并设置环境变量
+ENV PNPM_HOME="/root/.local/share/pnpm"
+ENV PATH="${PNPM_HOME}:${PATH}"
 
 # 安装依赖
-RUN npm install
+RUN npm install -g pnpm && \
+    pnpm install
 
 # 复制项目文件
 COPY . .
 
 # 构建项目
-RUN npm run build
+RUN pnpm run build
 
 # 生产阶段
-FROM nginx:stable-alpine as production-stage
+FROM nginx:stable-alpine AS production-stage
 
 # 复制构建产物到 Nginx 目录
 COPY --from=build-stage /app/dist /usr/share/nginx/html
