--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@amap/amap-jsapi-loader": "^1.0.1",
         "@ant-design/icons-vue": "^7.0.1",
         "@antv/g6": "^4.8.24",
         "@element-plus/icons-vue": "^2.3.1",
         "@kjgl77/datav-vue3": "^1.7.2",
         "@tsparticles/slim": "^3.3.0",
         "@tsparticles/vue3": "^3.0.1",
-        "ant-design-vue": "4.0.0-rc.6",
+        "ant-design-x-vue": "^1.2.4",
         "axios": "^1.6.8",
         "bootstrap": "5.3.0-alpha1",
         "dayjs": "^1.11.11",
@@ -28,6 +29,7 @@
         "tsparticles": "^3.3.0",
         "tsparticles-engine": "^2.12.0",
         "vue": "^3.4.21",
+        "vue-element-plus-x": "^1.2.0",
         "vue-router": "^4.3.0"
     },
     "devDependencies": {
