--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@amap/amap-jsapi-loader": "^1.0.1",
+        "@ant-design/icons-vue": "^7.0.1",
         "@element-plus/icons-vue": "^2.3.1",
         "@kjgl77/datav-vue3": "^1.7.2",
         "@tsparticles/slim": "^3.3.0",
